Switch to Java 1.8
This will improve our ability to run automated tests in the future!